@startuml
skinparam defaultFontName Times New Roman
skinparam defaultFontSize 11

skinparam classBackgroundColor #F3E79B
skinparam classBorderColor black
skinparam classBorderThickness 1
skinparam roundCorner 0
skinparam shadowing false

skinparam classFontName Times New Roman
skinparam classFontSize 13
skinparam classFontStyle bold
skinparam classAttributeFontName Times New Roman
skinparam classAttributeFontSize 11
skinparam classAttributeFontStyle plain

skinparam arrowColor black
skinparam arrowThickness 1
skinparam linetype ortho

hide stereotype
hide empty members

abstract class BaseEntity <<Entity>> {
+ Id: int
+ CreatedAt: DateTime
+ UpdatedAt: DateTime?
+ IsDeleted: bool
+ DeletedAt: DateTime?
}

class Tour <<Entity>> {
+ TourTypeId: int
+ Name: string
+ Slug: string
+ Code: string
+ DurationDays: int
+ DurationNights: int
+ Location: string
+ PriceAdult: decimal
+ PriceChild: decimal
+ PriceInfant: decimal
+ MaxPeople: int
+ SalePrice: decimal?
+ IsActive: bool
+ IsFeatured: bool
+ ShortDescription: string?
+ Description: string?
+ Included: string?
+ Excluded: string?
+ Note: string?
+ Transportation: string?
+ Hotel: string?
+ CreatedBy: int
+ UpdatedBy: int?
}

class TourType <<Entity>> {
+ Name: string
+ Slug: string
+ Description: string?
+ Icon: string?
+ SortOrder: int
}

class TourImage <<Entity>> {
+ TourId: int
+ ImageUrl: string
+ AltText: string?
+ SortOrder: int
}

class Booking <<Entity>> {
+ BookingCode: string
+ CustomerId: int
+ TourId: int
+ BookingDate: DateTime
+ StartDate: DateTime
+ EndDate: DateTime
+ NumAdults: int
+ NumChildren: int
+ TotalPrice: decimal
+ DiscountAmount: decimal
+ FinalPrice: decimal
+ Status: BookingStatus
+ Notes: string?
+ PaymentStatus: PaymentStatus
+ PaymentMethod: PaymentMethod?
+ DiscountId: int?
+ CreatedBy: int
+ UpdatedBy: int?
}

class BookingDetail <<Entity>> {
+ BookingId: int
+ FullName: string?
+ PassportNumber: string?
+ Note: string?
}

class Customer <<Entity>> {
+ UserId: int?
+ FullName: string
+ Email: string?
+ Phone: string?
+ Address: string?
+ PassportNumber: string?
+ IdCard: string?
+ Nationality: string?
+ DateOfBirth: DateTime?
+ IsActive: bool
}

class Payment <<Entity>> {
+ BookingId: int
+ TransactionId: string
+ Amount: decimal
+ PaymentMethod: PaymentMethod
+ Status: string
+ Note: string?
+ CreatedBy: int
}

class Itinerary <<Entity>> {
+ TourId: int
+ DayNumber: int
+ Title: string
+ Description: string?
+ Meals: string?
+ Hotel: string?
+ Activities: string?
}

class Discount <<Entity>> {
+ Code: string
+ Description: string?
+ DiscountValue: decimal
+ MinOrderValue: decimal?
+ MaxDiscountAmount: decimal?
+ UsageLimit: int?
+ UsedCount: int
+ StartDate: DateTime
+ EndDate: DateTime
+ IsActive: bool
}

class Review <<Entity>> {
+ TourId: int
+ CustomerId: int
+ BookingId: int?
+ Rating: int
+ Comment: string?
+ Status: ReviewStatus
+ IsActive: bool
}

class User <<Entity>> {
+ Username: string
+ Email: string
+ PasswordHash: string
+ FullName: string
+ Phone: string?
+ RefreshToken: string?
+ RefreshTokenExpiry: DateTime?
+ IsActive: bool
}

class Role <<Entity>> {
+ Name: string
+ Description: string
}

class UserRole <<Entity>> {
+ UserId: int
+ RoleId: int
}

class Blog <<Entity>> {
+ Title: string
+ Slug: string
+ Content: string
+ Excerpt: string?
+ Author: string?
+ ThumbnailUrl: string?
+ Tags: string?
+ IsActive: bool
+ PublishedAt: DateTime?
}

class BlogCategory <<Entity>> {
+ Name: string
+ Description: string?
}

class ContactMessage <<Entity>> {
+ Name: string
+ Email: string
+ Subject: string
+ Message: string
+ IsRead: bool
}

enum BookingStatus {
+ Pending
+ Confirmed
+ InProgress
+ Completed
+ Cancelled
+ Refunded
}

enum PaymentStatus {
+ Unpaid
+ Partial
+ Paid
+ Refunded
}

enum PaymentMethod {
+ Cash
+ BankTransfer
+ CreditCard
+ EWallet
}

enum ReviewStatus {
+ Pending
+ Approved
+ Rejected
}

enum TourStatus {
+ Active
+ Inactive
}

enum BlogStatus {
+ Draft
+ Published
+ Archived
}

enum DiscountType {
+ Percentage
+ FixedAmount
}

enum Gender {
+ Male
+ Female
+ Other
}

' === Relationships ===

BaseEntity <|-- Tour
BaseEntity <|-- TourType
BaseEntity <|-- TourImage
BaseEntity <|-- Booking
BaseEntity <|-- BookingDetail
BaseEntity <|-- Customer
BaseEntity <|-- Payment
BaseEntity <|-- Itinerary
BaseEntity <|-- Discount
BaseEntity <|-- Review
BaseEntity <|-- User
BaseEntity <|-- Role
BaseEntity <|-- UserRole
BaseEntity <|-- Blog
BaseEntity <|-- BlogCategory
BaseEntity <|-- ContactMessage

TourType "1" -- "many" Tour : Classifies
Tour "1" -- "many" TourImage : Displays
Tour "1" -- "many" Booking : References
Tour "1" -- "many" Review : Receives
Tour "1" -- "many" Itinerary : Schedules
Tour "many" -- "1" User : CreatedBy
Tour "many" -- "1" User : UpdatedBy

Customer "1" -- "many" Booking : Places
Customer "1" -- "many" Review : Writes
Customer "many" -- "1" User : Identifies

Booking "1" -- "many" BookingDetail : Includes
Booking "1" -- "many" Payment : Has
Booking "many" -- "1" Discount : Applies
Booking "many" -- "1" User : CreatedBy
Booking "many" -- "1" User : UpdatedBy

Payment "many" -- "1" User : CreatedBy

User "1" -- "many" UserRole : Has
Role "1" -- "many" UserRole : AssignedTo

note "BookingStatus, PaymentStatus,\nPaymentMethod, ReviewStatus,\nTourStatus are used as\nproperty types in entities" as enumNote
@enduml
